--- a/public/index.html
+++ b/public/index.html
@@ -41,11 +41,12 @@
       integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
       crossorigin=""
     />
-    <script src="https://api.mapbox.com/mapbox.js/v3.2.1/mapbox.js"></script>
+    <!-- <script src="https://api.mapbox.com/mapbox.js/v3.2.1/mapbox.js"></script>
     <link
       href="https://api.mapbox.com/mapbox.js/v3.2.1/mapbox.css"
       rel="stylesheet"
     />
+    -->
 
     <title>React App</title>
   </head>
